--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -210,7 +210,7 @@ Research whether the "verified" Jupiter API filter tag assures us a case-sensiti
 Double check all new Jupiter exchange market logic.
 
 
-Double check all new db upgrade / downgrade logic.
+Double check all new db upgrade / downgrade logic ON PLUGINS (we already fully tested the main app upgrading / downgrading).
 
 
 Document new 'plug_version' setting for plugins.
