--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6865,7 +6865,7 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Upgraded to the new jupiter aggregator token search / info / price API endpoints (so Jupiter markets work again now)
 
--More reliable cached database upgrades, when upgrading an EXISTING installation
+-More reliable cached database upgrades, when upgrading / downgrading an EXISTING installation
 
 -Added number formatting (by chosen locale) to the "My Portfolio" section
 
