--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,6 +192,15 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+Add the same hard-coded-config check we do for the app config, to plugin configs.
+
+
+Double check all new db upgrade / downgrade logic ON PLUGINS (we already fully tested the main app upgrading / downgrading).
+
+
+Document new 'plug_version' setting for plugins.
+
+
 Obfucate logs data from showing values during database upgrades.
 
 
@@ -208,12 +217,6 @@ Research whether the "verified" Jupiter API filter tag assures us a case-sensiti
 
 
 Double check all new Jupiter exchange market logic.
-
-
-Double check all new db upgrade / downgrade logic ON PLUGINS (we already fully tested the main app upgrading / downgrading).
-
-
-Document new 'plug_version' setting for plugins.
 
 
 Create documentation for exposing plugin settings into it's admin interface (to add to step 14 in the plugin development documentation).
