--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,13 +192,10 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
-Double check all new db upgrade / downgrade logic ON APP and PLUGINS.
+Double check all new db upgrade / downgrade logic ON APP and PLUGINS (seems debugged great, BUT was heavily refactored!).
 
 
-Obfucate logs data from showing values during database upgrades.
-
-
-Move system stats chart scale settings from asset charts section, back to power user section. Review other chart settings to make sure they are only relevant to the assets parent section it's in.
+Move system stats chart scale settings from asset charts section, back to power user section. Review other chart settings in there, to make sure they are only relevant to the 'Asset Tracking' parent section it's in.
 
 
 Test out the balance tracker plugin, with only a coingecko TERMINAL Solana market (and no Jupiter markets at all), for SPL token tracking (automatically adding that solana-based coin to the interface).
@@ -213,10 +210,10 @@ Research whether the "verified" Jupiter API filter tag assures us a case-sensiti
 Double check all new Jupiter exchange market logic.
 
 
-Create documentation for exposing plugin settings into it's admin interface (to add to step 14 in the plugin development documentation).
-
-
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+Create BETTER documentation for exposing plugin settings into it's admin interface (to add to step 15 in the plugin development documentation).
 
 
 Add the same hard-coded-config check we do for the app config, to plugin configs.
