UX tweaks, notes
UX tweaks, notes

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,6 +192,9 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+Besides our usual testing on db upgrades, try turning a plugin on and off in the interface, and see if we're triggering any unwanted behaviors (any alerts in logging).
+
+
 Double check all new db upgrade / downgrade logic ON APP and PLUGINS (seems debugged great, BUT was heavily refactored!).
 
 
@@ -213,7 +216,7 @@ Double check all new Jupiter exchange market logic.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-We need to store the app / plugin versions INSIDE THE CACHED CONFIG (as keys "db_app_version" / "db_plug_version"), ONLY TO VALIDATE / CHECK AGAINST CURRENT VERSIONS WHEN RESTORING FROM A SAVED CONFIG FILE (WE STILL NEED THE FLAT FILE CACHED VERSIONS FOR A MORE RELIABLE UPGRADE / DOWNGRADE EXPERIENCE). We need to update these stored versions WHEN WE UPDATE THE FLAT FILE CACHE OF THE VERSIONS. If the current version does not match the database version during config file restore sessions, WE WARN USERS VIA LOGGING THAT WE ARE RESETTING THE APP OR SPECIFIC PLUGIN'S CONFIG.
+We need to store the app / plugin versions INSIDE THE CACHED CONFIG (as keys "db_app_version" / "db_plug_version"), ONLY TO VALIDATE / CHECK AGAINST CURRENT VERSIONS WHEN RESTORING FROM A SAVED CONFIG FILE (WE STILL NEED THE FLAT FILE CACHED VERSIONS FOR A MORE RELIABLE UPGRADE / DOWNGRADE EXPERIENCE). We need to update these stored versions WHEN WE UPDATE THE FLAT FILE CACHE OF THE VERSIONS. If the current version does not match the database version during config file restore sessions, WE WARN USERS VIA LOGGING THAT WE ARE RESETTING THE APP OR SPECIFIC PLUGIN'S CONFIG. For the "db_version" values we want to add to the cached config, we need to somehow add them without screwing up high security mode's "auto cache updating". This could be a big challenge, as we NEED these values in the CACHED config somehow, in case a user is RESTORING a very old config backup, BUT we want to minimize having to rewrite the logic for high security mode auto updating of the cached config.
 
 
 Implement 'plugin_deny_additions' / 'plugin_deny_removals' (with same format that we already implemented in the array structure of 'plugin_allow_resets'). Also include documentation on this in plugins documentation. 
