--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,6 +192,9 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+Make ajax "wizard steps" logging show in the alerts interface, and consider having any "market" errors be shown only in debugging mode. Maybe only under the condition that an asset search is in-progress, which we already set the global flag $ct['ticker_markets_search'] to know when this is happening. Usually though (IF no asset search is in-progress), we prefer market errors to show in the interface.
+
+
 Assure we are properly catching jupiter token address retrieval FALIURES in market_tickers_parse(), SO WE HAVE NO FUNKY ASSET SEARCH RESULTS.
 
 
@@ -199,9 +202,6 @@ TRIPLE check all new Jupiter exchange market logic.
 
 
 TRIPLE check all new db upgrade / downgrade logic ON APP and PLUGINS (seems debugged great, BUT was heavily refactored last release!), INCLUDING turning plugins on / off, deleting plugin state caches, AND under different admin security levels.
-
-
-Add pagination to the "my portfolio" section, like we already do for other sorted data tables.
 
 
 Name / mcap slug should be EDITABLE on the portfolio assets admin page. Make sure to sanitize the user-inputted name (like we do when adding markets via interface).
@@ -215,10 +215,21 @@ Have $ct['dev']['special_assets'] in developer-config.php DYNAMICALLY USED in ev
           	                     'ALTNFTS',
 
 
+Add pagination to the "my portfolio" section, like we already do for other sorted data tables.
+
+
 Option to use new zip file encryption password feature to encrypt portfolio spreadsheet exports when downloading exported portfolio data (with password entered in the UI, #NOT# $ct['conf']['sec']['backup_archive_password'], AS THATS ONLY FOR ADMIN USE!).
 
 
-We need to store the app / plugin versions INSIDE THE CACHED CONFIG (as keys "db_app_version" / "db_plug_version"), ONLY TO VALIDATE / CHECK AGAINST CURRENT VERSIONS WHEN RESTORING FROM A SAVED CONFIG FILE (WE STILL NEED THE FLAT FILE CACHED VERSIONS FOR A MORE RELIABLE UPGRADE / DOWNGRADE EXPERIENCE). We need to update these stored versions WHEN WE UPDATE THE FLAT FILE CACHE OF THE VERSIONS. If the current version does not match the database version during config file restore sessions, WE WARN USERS VIA LOGGING THAT WE ARE RESETTING THE APP OR SPECIFIC PLUGIN'S CONFIG. For the "db_version" values we want to add to the cached config, we need to somehow add them without screwing up high security mode's "auto cache updating". This could be a big challenge, as we NEED these values in the CACHED config somehow, in case a user is RESTORING a very old config backup, BUT we want to minimize having to rewrite the logic for high security mode auto updating of the cached config.
++++++++++
+
+We need to store the app / plugin versions INSIDE THE CACHED CONFIG (as keys "db_app_version" / "db_plug_version"), TO SAFELY VALIDATE / CHECK AGAINST CURRENT VERSIONS WHEN RESTORING FROM A OLDER SAVED CONFIG FILE (to make sure what settings within OLD backups can be SAFELY imported). We need to update these stored versions WHENEVER WE UPDATE THE CACHED CONFIG (EVEN for high security mode cached config updating [RESETS], as a user could change security modes later in the future, AND we still backup the cached config for app backups even in high security mode).
+
+DURING THE RESTORE IMPORT, SHOW AN "IMPORT SUMMARY", showing admin sections with checkbox (with NOTHING CHECKED OFF BY DEFAULT) / expand detials UI, and what settings are DIFFERENT FROM CURRENT DEFAULTS / WHAT SETTINGS CANNOT BE SAFELY IMPORTED?
+
+For the "db_app_version" / "db_plug_version" values we add to the CACHED config, we need to somehow add them without screwing up high security mode's "auto cache updating" MD5 CHECKS. This can be done by stripping out ALL the keys named "db_app_version" / "db_plug_version" from the CACHED config BEFORE RUNNING HIGH SECURITY MODE "auto cache updating" MD5 CHECKS.
+
++++++++++
 
 
 Implement 'plugin_deny_additions' / 'plugin_deny_removals' (with same format that we already implemented in the array structure of 'plugin_allow_resets'). Also include documentation on this in plugins documentation. 
